#45 - chore(release): Modernize release workflow